--- a/src/home.css
+++ b/src/home.css
@@ -1,26 +1,19 @@
 body {
   background: rgb(134, 213, 222);
+  background-image: url("sun.gif");
+  background-size: cover;
 }
 .container {
   margin: 20px auto;
   border-radius: 20px;
-  padding: 0px;
+  padding-left: 40px;
+  padding-right: 40px;
   font-family: "Montserrat", sans-serif;
   font-family: "Poppins", sans-serif;
-
   color: white;
   align-content: center;
 }
-.background {
-  background-image: url("Media/sun.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  display: block;
-  position: absolute;
-  z-index: -1;
-  top: 50px;
-}
+
 .searchbr {
   margin: 20px auto;
   text-align: center;
@@ -43,7 +36,7 @@ body {
 .top {
   display: flex;
   align-items: center;
-  background: rgba(52, 64, 68, 0.101);
+  background: rgba(52, 64, 68, 0.401);
   justify-content: space-between;
   padding: 15px;
   border-radius: 15px;
@@ -71,7 +64,7 @@ h1 span,
 
 .center-info {
   text-align: center;
-  background: rgba(75, 102, 106, 0.255);
+  background: rgba(93, 108, 110, 0.555);
   border-radius: 15px;
 }
 .sun-icon i {
@@ -91,8 +84,11 @@ h4 {
   align-self: center;
   display: flex;
   list-style: none;
-  margin: 20px auto;
-  padding: 0px;
+  margin: 15px auto;
+
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
   margin-right: 0%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0, 0.35);
   border-radius: 10px;
@@ -100,7 +96,7 @@ h4 {
   background: transparent;
 }
 .days-list li {
-  padding: 15px;
+  padding: 13px;
   cursor: pointer;
   display: flex;
   border-radius: 10px;
