--- a/src/home.css
+++ b/src/home.css
@@ -89,6 +89,7 @@ h4 {
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
+  margin-top: 10px;
   margin-right: 0%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0, 0.35);
   border-radius: 10px;
@@ -108,6 +109,7 @@ h4 {
 }
 .days-list li .bx {
   margin-bottom: 20px;
+  margin-top: 10px;
   font-size: 20px;
 }
 .days-list li:hover {
@@ -118,4 +120,24 @@ h4 {
 }
 .p-h-w {
   line-height: 0.5;
+}
+
+.clear {
+  background-image: url("clear.gif");
+}
+
+.clouds {
+  background-image: url("clouds.gif");
+}
+
+.rain {
+  background-image: url("rain.gif");
+}
+
+.snow {
+  background-image: url("snow.gif");
+}
+
+.other {
+  background-image: url("sun.gif");
 }
