--- a/src/home.css
+++ b/src/home.css
@@ -67,13 +67,32 @@ h1 span,
   background: rgba(93, 108, 110, 0.555);
   border-radius: 15px;
 }
-.sun-icon i {
+h5 {
   font-size: 250px;
+  margin-bottom: 0px;
+  padding: 0px;
+  line-height: 1;
 }
-h3 {
-  font-weight: medium;
+i {
+  margin: 0px;
+  padding: 0px;
+}
+
+h3 strong {
+  font-weight: light;
   font-size: 70px;
-  margin: 0px auto;
+  margin-right: auto;
+  padding: 0px;
+  text-align: center;
+  line-height: 1.5;
+  position: relative;
+  right: -27px;
+}
+h3 .units {
+  position: relative;
+  font-size: 18px;
+  right: -22px;
+  top: -35px;
 }
 h4 {
   font-size: 30px;
@@ -108,7 +127,7 @@ h4 {
   background: rgba(9, 106, 163, 0.958);
 }
 .days-list li .bx {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   margin-top: 10px;
   font-size: 20px;
 }
@@ -118,8 +137,18 @@ h4 {
   color: rgb(18, 18, 60);
   box-shadow: 0 5px rgba(0, 0, 0, 0, 0.35);
 }
-.p-h-w {
-  line-height: 0.5;
+li {
+  list-style: none;
+}
+
+.col-md-6 {
+  opacity: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+ul {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .clear {
