--- a/src/home.css
+++ b/src/home.css
@@ -56,7 +56,7 @@ h2 {
   font-size: 25px;
 }
 
-h1 span,
+#hour,
 .date {
   font-weight: lighter;
   font-size: 20px;
@@ -98,6 +98,7 @@ h4 {
   font-size: 30px;
   font-weight: 400;
   margin: 0px auto;
+  text-transform: capitalize;
 }
 .days-list {
   align-self: center;
@@ -143,8 +144,8 @@ li {
 
 .col-md-6 {
   opacity: 70%;
-  margin-left: auto;
   margin-right: auto;
+  margin-left: auto;
 }
 ul {
   padding-left: 0;
