--- a/src/home.css
+++ b/src/home.css
@@ -72,6 +72,10 @@ h5 {
   margin-bottom: 0px;
   padding: 0px;
   line-height: 1;
+  transition: 150ms ease-in-out;
+}
+h5:hover {
+  color: rgba(109, 209, 237, 0.723);
 }
 i {
   margin: 0px;
@@ -109,56 +113,30 @@ h4 {
   margin: 0px auto;
   text-transform: capitalize;
 }
-.days-list {
-  align-self: center;
-  display: flex;
-  list-style: none;
+.weatherForecast {
   margin: 15px auto;
 
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
+  padding-top: 10px;
   margin-top: 10px;
   margin-right: 0%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0, 0.35);
   border-radius: 10px;
   justify-content: space-between;
-  background: transparent;
-}
-.days-list li {
-  padding: 13px;
-  cursor: pointer;
-  display: flex;
-  border-radius: 10px;
-  flex-direction: column;
-
-  align-items: center;
+  background: rgba(7, 8, 8, 0.193);
   transition: all 0.3s ease-in-out;
-  background: rgba(9, 106, 163, 0.958);
-}
-.days-list li .bx {
-  margin-bottom: 10px;
-  margin-top: 10px;
-  font-size: 20px;
-}
-.days-list li:hover {
-  transform: scale(1.1);
-  background: rgb(210, 231, 235);
-  color: rgb(18, 18, 60);
-  box-shadow: 0 5px rgba(0, 0, 0, 0, 0.35);
-}
-li {
-  list-style: none;
 }
 
+ul {
+  list-style: none;
+  padding: 0px;
+}
 .col-md-6 {
   opacity: 70%;
   margin-right: auto;
   margin-left: auto;
-}
-ul {
-  padding-left: 0;
-  padding-right: 0;
 }
 
 .clear {
@@ -179,4 +157,23 @@ ul {
 
 .other {
   background-image: url("sun.gif");
+}
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.7;
+}
+.weatherForecast i {
+  font-size: 30px;
+}
+.weather-forecast-temperatures {
+  font-size: 14px;
+}
+.weather-forecast-temperatures-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperatures-max {
+  color: white;
+  font-weight: 300px;
+  font-size: 14px;
 }
